Bug 398392 - Button to mute/unmute notification sounds does not work as expected until "Notification sounds" slider is clicked
Summary: Button to mute/unmute notification sounds does not work as expected until "No...
Status: RESOLVED FIXED
Alias: None
Product: plasma-pa
Classification: Unmaintained
Component: kcm (other bugs)
Version First Reported In: 5.15.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
: 395293 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-09-08 12:23 UTC by Patrick Silva
Modified: 2019-04-11 07:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2018-09-08 12:23:08 UTC
start plasma session, open dolphin, select some file/folder, press shift+del, cancel file/folder deletion, right click sound icon in the system tray,
select "Configure audio volume...", click "Audio volume" section,
click "applications" tab, click the button to mute/unmute
the notification sounds (above percentage).
Result: mute/unmute button changes visually but the state of the "Notification sounds" feature remains the same.
Click "Notification sounds" slider, click mute-unmute button again: now the button works as expected.
Comment 1 Patrick Silva 2018-09-08 14:15:28 UTC
*** Bug 395293 has been marked as a duplicate of this bug. ***
Comment 2 Kai Uwe Broulik 2019-04-11 07:28:10 UTC
Git commit fbdef07f554bbec59d6142837fdf44afd103f6dc by Kai Uwe Broulik.
Committed on 11/04/2019 at 07:27.
Pushed by broulik into branch 'Plasma/5.15'.

[StreamRestore] Don't mess with channels

Just set volume for all of them.
Otherwise when just calling setMuted, we will send the original volume struct, which might have multiple channels,
with a hardcoded channel map that only has one channel. PulseAudio then refuses to write the settings.

Patch ported from pulseaudio-qt
FIXED-IN: 5.15.5

Differential Revision: https://phabricator.kde.org/D20450

M  +4    -4    src/streamrestore.cpp

https://commits.kde.org/plasma-pa/fbdef07f554bbec59d6142837fdf44afd103f6dc