[StreamRestore] Don't mess with channels

Just set volume for all of them.
Otherwise when just calling setMuted, we will send the original volume struct, which might have multiple channels,
with a hardcoded channel map that only has one channel. PulseAudio then refuses to write the settings.

Patch ported from pulseaudio-qt

BUG: 398392
FIXED-IN: 5.15.5

Differential Revision: https://phabricator.kde.org/D20450