src/streamrestore.cpp
@@ -100,8 +100,9 @@ qint64 StreamRestore::volume() const
 void StreamRestore::setVolume(qint64 volume)
 {
     pa_cvolume vol = m_cache.valid ? m_cache.volume : m_volume;
-    vol.channels = 1;
-    vol.values[0] = volume;
+    for (int i = 0; i < vol.channels; ++i) {
+        vol.values[i] = volume;
+    }
 
     if (m_cache.valid) {
         writeChanges(vol, m_cache.muted, m_cache.device);
@@ -184,8 +185,7 @@ void StreamRestore::writeChanges(const pa_cvolume &volume, bool muted, const QSt
 
     pa_ext_stream_restore_info info;
     info.name = nameData.constData();
-    info.channel_map.channels = 1;
-    info.channel_map.map[0] = PA_CHANNEL_POSITION_MONO;
+    info.channel_map = m_channelMap;
     info.volume = volume;
     info.device = deviceData.isEmpty() ? nullptr : deviceData.constData();
     info.mute = muted;
